# cmake-workshop

./: .buildinfo  .gitignore  README.md  apt.txt  environment.yml  index.html  objects.inv  requirements.txt  searchindex.js
.github/: workshop.yml
.github/workflows/: binder.yaml  binder.yml  sphinx.yml  test.yml
_downloads/0a6cc4966daf0500025ac5babdd4f268/: 24_fortran-cxx.tar.bz2
_downloads/0e8de2a7401abe54c61d9785e6adc27f/: 01_libraries-f_solution.tar.bz2
_downloads/1e955aa7952605b36c4491740042f7a7/: environment.yml
_downloads/272b3677c54b50f2321af7fb88601c9c/: 25_cxx-fortran_solution.tar.bz2
_downloads/276265b781effc5c7cbc335e49cc14fc/: 11_ctest-timeout.tar.bz2
_downloads/27dbaae30d4b8e77f4ae28e42b26e3b7/: 16_configure.tar.bz2
_downloads/31fe6f0bb7efc435e94f4b6b63068bda/: 03_loops-cxx.tar.bz2
_downloads/3660bb4f040037e8630b8fbc202494c4/: 04_options-f_solution.tar.bz2
_downloads/36bc0ff394b405ad5755d993e945f5d9/: 17_find_cffi.tar.bz2
_downloads/3762b9d8d80fb9dbc132153461b7c831/: 21_automata-cxx.tar.bz2
_downloads/3ac0cee2d924c0b593d23729842d9b04/: 21_automata-f.tar.bz2
_downloads/4aeba38be3a87c223a17062596d33112/: 22_taskloop_solution.tar.bz2
_downloads/4bfde3c0f0e326f7822e70deb2ee442f/: 09_ctest-will-fail_solution.tar.bz2
_downloads/57ecbc4ad941fe059cd7474b676fc9bb/: 23_mpi-cxx.tar.bz2
_downloads/643501d133ed4bb51b1dc7fdcc2cbcfa/: 02_conditionals-cxx.tar.bz2
_downloads/6a5ed8e1b04dc0152d5370e933e98f35/: 10_ctest-cost_solution.tar.bz2
_downloads/82f5ee3713a9eb7e3740bb076e7b183f/: 06_bash-ctest_solution.tar.bz2
_downloads/8ce86d5ad9ad399be6338e20de0e28a5/: 15_sys_preproc_solution.tar.bz2
_downloads/9540ea60bf36a45b8a2eb3d723403265/: 27_cxx-python_solution.tar.bz2
_downloads/984eea57fa81fe7babf5edbc11eb7919/: 00_hello-cxx_solution.tar.bz2
_downloads/9c6154390f65c609b263ebfca89bcca3/: 07_python-ctest_solution.tar.bz2
_downloads/a3dad364192e8fab8685eb9bd523e4ef/: 03_loops-cxx_solution.tar.bz2
_downloads/a592d0b77033559e0e0afcdfe98b1ebd/: 01_libraries-cxx.tar.bz2
_downloads/b016479ea5219646a391a10af0022dbe/: 23_mpi-f.tar.bz2
_downloads/b0b0748eea7a6d77c03dfddb9d6a29ff/: 20_check_source_runs.tar.bz2
_downloads/c1df79a18420f9048638d5705ebd6402/: 26_more-catch2_solution.tar.bz2
_downloads/ca43e025d5c3f61f08c226b5b377ff09/: 01_libraries-cxx_solution.tar.bz2
_downloads/d0f5fab4bbc8f1e2cdb60679ec83d372/: 05_hello-ctest.tar.bz2
_downloads/d5285e38c2063225e98a44f94d4c8759/: 21_automata-cxx_solution.tar.bz2
_downloads/df4aeec724f5d574101e55413636b4e5/: 18_pre_post-f_solution.tar.bz2
_downloads/f55be47ec0797d67adec0aba713ebc94/: 19_check_compiler_flag.tar.bz2
_sources/: cxx-fortran.rst.txt  environment.rst.txt  fetch-content.rst.txt  guide.rst.txt  hello-cmake.rst.txt  index.rst.txt  probing.rst.txt  setup.rst.txt  tips-and-tricks.rst.txt  zbibliography.rst.txt
_static/: sphinx_lesson.css
cmake-syntax/: index.html
content/: bibliography.bib  cmake-syntax.rst  cmake.drawio  conf.py  ctest-catch2.rst  custom.py  cxx-fortran.rst  cxx-python.rst  dependencies.rst  environment.rst  fetch-content.rst  guide.rst  hello-cmake.rst  hello-ctest.rst  index.rst  probing.rst  python-bindings.rst  setup.rst  targets.rst  tips-and-tricks.rst
content/code/conditionals-cxx/: CMakeLists.txt
content/code/conditionals-f/: CMakeLists.txt
content/code/cxx-python/account/: CMakeLists.txt
content/code/day-1/01_libraries-cxx/: CMakeLists.txt
content/code/day-1/01_libraries-cxx/solution/: CMakeLists.txt
content/code/day-1/01_libraries-f/: CMakeLists.txt
content/code/day-1/01_libraries-f/solution/: CMakeLists.txt
content/code/day-1/02_conditionals-cxx/solution/: CMakeLists.txt
content/code/day-1/02_conditionals-f/solution/: CMakeLists.txt
content/code/day-1/04_options-f/: CMakeLists.txt
content/code/day-1/04_options-f/solution/: CMakeLists.txt
content/code/day-1/05_hello-ctest/solution/: CMakeLists.txt
content/code/day-1/06_bash-ctest/solution/: CMakeLists.txt
content/code/day-1/08_ctest-labels/: CMakeLists.txt
content/code/day-1/08_ctest-labels/solution/: CMakeLists.txt
content/code/day-1/09_ctest-will-fail/solution/: CMakeLists.txt
content/code/day-1/10_ctest-cost/solution/: CMakeLists.txt
content/code/day-1/11_ctest-timeout/solution/: CMakeLists.txt
content/code/day-1/15_sys_preproc/: CMakeLists.txt
content/code/day-1/15_sys_preproc/solution/: CMakeLists.txt
content/code/day-1/16_configure/: CMakeLists.txt  config.h.in  processor-info.cpp
content/code/day-1/16_configure/solution/: CMakeLists.txt  config.h.in  processor-info.cpp
content/code/day-1/17_find_cffi/: CMakeLists.txt
content/code/day-1/17_find_cffi/solution/: CMakeLists.txt
content/code/day-1/18_pre_post-f/: CMakeLists.txt  echo-file.py  static-size.py
content/code/day-1/18_pre_post-f/solution/: CMakeLists.txt
content/code/day-1/19_check_compiler_flag/: CMakeLists.txt
content/code/day-1/19_check_compiler_flag/solution/: CMakeLists.txt
content/code/day-1/20_check_source_runs/: CMakeLists.txt
content/code/day-1/20_check_source_runs/solution/: CMakeLists.txt
content/code/day-2/23_mpi-cxx/: CMakeLists.txt
content/code/day-2/23_mpi-cxx/solution/: CMakeLists.txt
content/code/day-2/26_more-catch2/: CMakeLists.txt  test.cpp
content/code/day-2/26_more-catch2/solution/: CMakeLists.txt
content/code/day-2/28_cxx-cffi/: CMakeLists.txt
content/code/day-2/28_cxx-cffi/account/: CMakeLists.txt
content/code/day-2/28_cxx-cffi/solution/: CMakeLists.txt
content/code/day-2/28_cxx-cffi/solution/account/: CMakeLists.txt  account.cpp  c_cpp_interface.cpp  cffi_builder.py
content/code/libraries-cxx/: CMakeLists.txt
cxx-fortran/: index.html
dependencies/: index.html
environment/: index.html
fetch-content/: index.html
genindex/: index.html
guide/: index.html
hello-cmake/: index.html
hello-ctest/: index.html
probing/: index.html
python-bindings/: index.html
quick-reference/: index.html
search/: index.html
setup/: index.html
targets/: index.html
tips-and-tricks/: index.html
zbibliography/: index.html
(+233 files in other folders)
