# set minimum cmake version
cmake_minimum_required(VERSION 3.18)

# project name
project(ctest-labels LANGUAGES NONE)

# FIXME detect python
find_package(...)

# FIXME enable testing

# FIXME add tests
add_test(...)

# FIXME set the "quick" label
set_tests_properties(...)

# FIXME set the "long" label
set_tests_properties(...)
